--- a/styling/style.css
+++ b/styling/style.css
@@ -61,8 +61,8 @@ a{
     background-color: coral;
 }
 .socmedia{
-    height: 80px;
-    width: 100px;
+    height: 60px;
+    width: 80px;
 }
 .mt-custom{
     margin-top: 1.5%;
@@ -70,4 +70,15 @@ a{
 .mt-custom2{
     margin-top: 10%;
 }
+.imgbrdr{
+    border: solid white;
+}
 
+@media (max-width: 575.98px) {
+    body{
+        width: 100%;
+    }
+    header{
+        display: grid;
+    }
+}
